--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,12 @@
 			<artifactId>curl</artifactId>
 			<version>0.0.38</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.22</version>
+		</dependency>
 
 
 
