Fixed few bugs.Added multithreading for auction house updates

--- a/.gitignore
+++ b/.gitignore
@@ -37,4 +37,4 @@ Todo.txt
 
 /src/main/resources/static/boostrapCss
 /src/main/resources/static/boostrapjs
-
+/src/main/java/com.trix.wowgarrisontracker/oldCode
