--- a/.gitignore
+++ b/.gitignore
@@ -37,4 +37,5 @@ Todo.txt
 
 /src/main/resources/static/bootstrapCss
 /src/main/resources/static/bootstrapJs
+/src/main/resources/static/boostrapJs
 /src/main/java/com.trix.wowgarrisontracker/oldCode
