--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,11 @@
             <version>3.8.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+            <version>2.4.1</version>
+        </dependency>
 
     </dependencies>
 
