--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/garrisontracker
+spring.datasource.username=root
+spring.datasource.password=MPno
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 config.jwt.key = "someRandomKey123"
 spring.datasource.maxActive=5
+spring.datasource.hikari.validationTimeout=300000
+org.hibernate.transaction=true
+vaadin.frontend.frontend.folder=./src/main/resources/statics/frontend
