--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,11 @@
             <artifactId>app-layout-addon</artifactId>
             <version>4.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.vaadin.klaudeta</groupId>
+            <artifactId>grid-pagination</artifactId>
+            <version>2.0.10</version>
+        </dependency>
     </dependencies>
 
     <repositories>
