--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ Todo.txt
 /src/main/resources/static/bootstrapJs
 /src/main/resources/static/boostrapJs
 /src/main/java/com.trix.wowgarrisontracker/oldCode
+/node_modules/
