--- a/pom.xml
+++ b/pom.xml
@@ -168,7 +168,11 @@
             <artifactId>grid-pagination</artifactId>
             <version>2.0.10</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.wontlost</groupId>
+            <artifactId>password-strength-vaadin</artifactId>
+            <version>1.0.1</version>
+        </dependency>
     </dependencies>
 
     <repositories>
