--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ vaadin.frontend.frontend.folder=./src/main/resources/statics/frontend
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-source=metadata
+client.id=${client.id}
+client.secret=${client.secret}
