Added sending mails. Now just need to add account activation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,9 @@ vaadin.frontend.frontend.folder=./src/main/resources/statics/frontend
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-source=metadata
 client.id=${client.id}
 client.secret=${client.secret}
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${email.login}
+spring.mail.password=${email.password}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
