--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.mail.username=${email.login}
 spring.mail.password=${email.password}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+about.email=Jakub.Olszowski@wp.pl
+about.phonenumber=123456789
