--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ config.jwt.key="someRandomKey123"
 spring.datasource.maxActive=5
 spring.datasource.hikari.validationTimeout=300000
 org.hibernate.transaction=true
-vaadin.frontend.frontend.folder=./src/main/resources/statics/frontend
+#vaadin.frontend.frontend.folder=./src/main/resources/statics/frontend
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-source=metadata
