Changed more than just backend. Added account settings and cleaned front end a bit

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,10 +5,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #logging.level.org.hibernate.SQL=DEBUG
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-hibernate.generate_statistics=true
-org.hibernate.stat=INFO
-log4j.logger.org.hibernate.type=INFO
-log4j.category.org.hibernate.type=INFO
-log4j.rootLogger=INFO, R
+#hibernate.generate_statistics=true
