--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,13 @@
 spring.datasource.maxActive=5
+spring.profiles.active=prod,vaadin
 spring.datasource.hikari.validationTimeout=300000
 org.hibernate.transaction=true
-#vaadin.frontend.frontend.folder=./src/main/resources/statics/frontend
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-source=metadata
-client.id=${client.id}
-client.secret=${client.secret}
+client.id=${CLIENT_ID}
+client.secret=${CLIENT_SECRET}
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=${email.login}
-spring.mail.password=${email.password}
+spring.mail.username=${EMAIL_LOGIN}
+spring.mail.password=${EMAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
