--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 
 
-about.email=Jakub.Olszowski@wp.pl
+about.email=pietrzyk.jakub001@gmail.com
 about.phonenumber=123456789
